correccion funcion score_titulo

--- a/notebooks/funciones.ipynb
+++ b/notebooks/funciones.ipynb
@@ -181,6 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Opcion 1\n",
     "def score_titulo(titulo_de_la_filmación:str):\n",
     "    \"Se ingresa el título de una filmación devuelve como respuesta el título, el año de estreno y el score\"\n",
     "\n",
@@ -257,10 +258,94 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def score_titulo(titulo_de_la_filmación:str):\n",
+    "    \"Se ingresa el título de una filmación devuelve como respuesta el título, el año de estreno y el score\"\n",
+    "\n",
+    "    # Cargando datos del archivo csv\n",
+    "    df = pd.read_csv(\"../datasets/model/movies.csv\", sep=\",\", low_memory=False)\n",
+    "    \n",
+    "    \n",
+    "    # Convertimos el titulo a minúsculas para evitar errores\n",
+    "    df['title'] = df['title'].str.lower()\n",
+    "    \n",
+    "    # Creamos un df_match en el cual guardamos las filas que coinciden con el titulo\n",
+    "    df_match = df[df[\"title\"].str.contains(titulo_de_la_filmación.lower())]\n",
+    "\n",
+    "    # Si el df_match está vacío quiere decir que la película no se encuentra en el dataframe\n",
+    "    if len(df_match) == 0: # Si la lista está vacía quiere decir que no se encontró ningun valor, devuelve el siguiente mensaje.\n",
+    "        return print(f\"La película {titulo_de_la_filmación} no se encontró, por favor ingrese otra.\")\n",
+    "    \n",
+    "    response = {\"título\": titulo_de_la_filmación.title(),\n",
+    "                \"anio\": df_match[\"release_year\"].iloc[0],\n",
+    "                \"popularidad\": df_match[\"popularity\"].iloc[0]}\n",
+    "    return response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'título': 'Scary Movie 5', 'anio': 2013, 'popularidad': 14.27281}"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "score_titulo('scary movie 5')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Opcion 1\n",
+    "def votos_titulo(titulo_de_la_filmación:str):\n",
+    "    \"\"\"Se ingresa el título de una filmación esperando como respuesta el título, la cantidad de votos y el valor promedio de las votaciones.\n",
+    "    La misma variable deberá de contar con al menos 2000 valoraciones, caso contrario, debemos contar con un mensaje avisando que no cumple esta condición y que por ende,\n",
+    "    no se devuelve ningun valor.\"\"\"\n",
+    "\n",
+    "    # Cargando datos del archivo csv\n",
+    "    df = pd.read_csv(\"../datasets/model/movies.csv\", sep=\",\", low_memory=False)\n",
+    "    \n",
+    "    response = []\n",
+    "\n",
+    "    for idx, row in enumerate(df[\"title\"]):\n",
+    "        if (row.lower() == titulo_de_la_filmación.lower()):\n",
+    "            if df['vote_count'][idx] >= 2000:\n",
+    "                response.append({\n",
+    "                \"título\": df[\"title\"][idx],\n",
+    "                \"anio\": df[\"release_year\"][idx],\n",
+    "                \"voto_total\": df[\"vote_count\"][idx],\n",
+    "                \"voto_promedio\": df[\"vote_average\"][idx]\n",
+    "                })\n",
+    "          \n",
+    "    if len(response) == 0: # Si la lista está vacía quiere decir que no se encontró ningun valor, devuelve el siguiente mensaje.\n",
+    "        return print(f\"La película {titulo_de_la_filmación} no cuenta con al menos 2000 valoraciones, por favor ingrese otra.\")\n",
+    "    \n",
+    "    else:\n",
+    "        return response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Opcion 2\n",
     "def votos_titulo(titulo_de_la_filmación:str):\n",
     "    \"\"\"Se ingresa el título de una filmación esperando como respuesta el título, la cantidad de votos y el valor promedio de las votaciones.\n",
     "    La misma variable deberá de contar con al menos 2000 valoraciones, caso contrario, debemos contar con un mensaje avisando que no cumple esta condición y que por ende,\n",
