correccion funcion score_titulo

--- a/notebooks/funciones.ipynb
+++ b/notebooks/funciones.ipynb
@@ -238,31 +238,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'título': 'Hulk', 'anio': 2003, 'popularidad': 15.422638}]"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "score_titulo('hulk')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def score_titulo(titulo_de_la_filmación:str):\n",
+    "def score_titulo(titulo_de_la_filmacion:str):\n",
     "    \"Se ingresa el título de una filmación devuelve como respuesta el título, el año de estreno y el score\"\n",
     "\n",
     "    # Cargando datos del archivo csv\n",
@@ -273,36 +253,16 @@
     "    df['title'] = df['title'].str.lower()\n",
     "    \n",
     "    # Creamos un df_match en el cual guardamos las filas que coinciden con el titulo\n",
-    "    df_match = df[df[\"title\"].str.contains(titulo_de_la_filmación.lower())]\n",
+    "    df_match = df[df[\"title\"].str.contains(titulo_de_la_filmacion.lower())]\n",
     "\n",
     "    # Si el df_match está vacío quiere decir que la película no se encuentra en el dataframe\n",
     "    if len(df_match) == 0: # Si la lista está vacía quiere decir que no se encontró ningun valor, devuelve el siguiente mensaje.\n",
-    "        return print(f\"La película {titulo_de_la_filmación} no se encontró, por favor ingrese otra.\")\n",
+    "        return print(f\"La película {titulo_de_la_filmacion} no se encontró, por favor ingrese otra.\")\n",
     "    \n",
-    "    response = {\"título\": titulo_de_la_filmación.title(),\n",
+    "    response = {\"título\": titulo_de_la_filmacion.title(),\n",
     "                \"anio\": df_match[\"release_year\"].iloc[0],\n",
     "                \"popularidad\": df_match[\"popularity\"].iloc[0]}\n",
     "    return response"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'título': 'Scary Movie 5', 'anio': 2013, 'popularidad': 14.27281}"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "score_titulo('scary movie 5')"
    ]
   },
   {
@@ -312,7 +272,7 @@
    "outputs": [],
    "source": [
     "# Opcion 1\n",
-    "def votos_titulo(titulo_de_la_filmación:str):\n",
+    "def votos_titulo(titulo_de_la_filmacion:str):\n",
     "    \"\"\"Se ingresa el título de una filmación esperando como respuesta el título, la cantidad de votos y el valor promedio de las votaciones.\n",
     "    La misma variable deberá de contar con al menos 2000 valoraciones, caso contrario, debemos contar con un mensaje avisando que no cumple esta condición y que por ende,\n",
     "    no se devuelve ningun valor.\"\"\"\n",
@@ -323,7 +283,7 @@
     "    response = []\n",
     "\n",
     "    for idx, row in enumerate(df[\"title\"]):\n",
-    "        if (row.lower() == titulo_de_la_filmación.lower()):\n",
+    "        if (row.lower() == titulo_de_la_filmacion.lower()):\n",
     "            if df['vote_count'][idx] >= 2000:\n",
     "                response.append({\n",
     "                \"título\": df[\"title\"][idx],\n",
@@ -333,7 +293,7 @@
     "                })\n",
     "          \n",
     "    if len(response) == 0: # Si la lista está vacía quiere decir que no se encontró ningun valor, devuelve el siguiente mensaje.\n",
-    "        return print(f\"La película {titulo_de_la_filmación} no cuenta con al menos 2000 valoraciones, por favor ingrese otra.\")\n",
+    "        return print(f\"La película {titulo_de_la_filmacion} no cuenta con al menos 2000 valoraciones, por favor ingrese otra.\")\n",
     "    \n",
     "    else:\n",
     "        return response"
@@ -341,12 +301,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Opcion 2\n",
-    "def votos_titulo(titulo_de_la_filmación:str):\n",
+    "def votos_titulo(titulo_de_la_filmacion:str):\n",
     "    \"\"\"Se ingresa el título de una filmación esperando como respuesta el título, la cantidad de votos y el valor promedio de las votaciones.\n",
     "    La misma variable deberá de contar con al menos 2000 valoraciones, caso contrario, debemos contar con un mensaje avisando que no cumple esta condición y que por ende,\n",
     "    no se devuelve ningun valor.\"\"\"\n",
@@ -354,46 +314,25 @@
     "    # Cargando datos del archivo csv\n",
     "    df = pd.read_csv(\"../datasets/model/movies.csv\", sep=\",\", low_memory=False)\n",
     "    \n",
-    "    response = []\n",
-    "\n",
-    "    for idx, row in enumerate(df[\"title\"]):\n",
-    "        if (row.lower() == titulo_de_la_filmación.lower()):\n",
-    "            if df['vote_count'][idx] >= 2000:\n",
-    "                response.append({\n",
-    "                \"título\": df[\"title\"][idx],\n",
-    "                \"anio\": df[\"release_year\"][idx],\n",
-    "                \"voto_total\": df[\"vote_count\"][idx],\n",
-    "                \"voto_promedio\": df[\"vote_average\"][idx]\n",
-    "                })\n",
-    "          \n",
-    "    if len(response) == 0: # Si la lista está vacía quiere decir que no se encontró ningun valor, devuelve el siguiente mensaje.\n",
-    "        return print(f\"La película {titulo_de_la_filmación} no cuenta con al menos 2000 valoraciones, por favor ingrese otra.\")\n",
+    "    # Convertimos el titulo a minúsculas para evitar errores\n",
+    "    df['title'] = df['title'].str.lower()\n",
     "    \n",
+    "    # Creamos un df_match en el cual guardamos las filas que coinciden con el titulo\n",
+    "    df_match = df[df[\"title\"].str.contains(titulo_de_la_filmacion.lower())]\n",
+    "\n",
+    "    # Si el df_match está vacío quiere decir que la película no se encuentra en el dataframe\n",
+    "    if len(df_match) == 0: \n",
+    "        respuesta = f'La película {titulo_de_la_filmacion} no está en la lista, por favor ingrese otra.'\n",
+    "        return {'error not found': respuesta}\n",
+    "    elif df_match['vote_count'].iloc[0] < 2000:\n",
+    "        respuesta = f'La película {titulo_de_la_filmacion} no cuenta con al menos 2000 valoraciones, por favor ingrese otra.'\n",
+    "        return {'error not found': respuesta}\n",
     "    else:\n",
-    "        return response"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'título': 'Titanic',\n",
-       "  'anio': 1997,\n",
-       "  'voto_total': 7770.0,\n",
-       "  'voto_promedio': 7.5}]"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "votos_titulo('titanic')"
+    "        response = {\"título\": titulo_de_la_filmacion.title(),\n",
+    "                \"anio\": df_match[\"release_year\"].iloc[0],\n",
+    "                \"voto_total\": df_match[\"vote_count\"].iloc[0],\n",
+    "                \"voto_promedio\": df_match[\"vote_average\"].iloc[0]}\n",
+    "    return response"
    ]
   },
   {
@@ -493,132 +432,6 @@
     "                'peliculas':movies_list_dict}\n",
     "    \n",
     "    return response"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'director': 'tim burton',\n",
-       " 'retorno_total_director': 61.21790076693029,\n",
-       " 'peliculas': [{'titulo': 'Ed Wood',\n",
-       "   'anio': 1994,\n",
-       "   'retorno_pelicula': 0.3270809444444444,\n",
-       "   'budget_pelicula': 18000000.0,\n",
-       "   'revenue_pelicula': 5887457.0},\n",
-       "  {'titulo': 'Batman',\n",
-       "   'anio': 1989,\n",
-       "   'retorno_pelicula': 11.7528264,\n",
-       "   'budget_pelicula': 35000000.0,\n",
-       "   'revenue_pelicula': 411348924.0},\n",
-       "  {'titulo': 'Batman Returns',\n",
-       "   'anio': 1992,\n",
-       "   'retorno_pelicula': 3.5,\n",
-       "   'budget_pelicula': 80000000.0,\n",
-       "   'revenue_pelicula': 280000000.0},\n",
-       "  {'titulo': 'Mars Attacks!',\n",
-       "   'anio': 1996,\n",
-       "   'retorno_pelicula': 1.4481573857142858,\n",
-       "   'budget_pelicula': 70000000.0,\n",
-       "   'revenue_pelicula': 101371017.0},\n",
-       "  {'titulo': 'Beetlejuice',\n",
-       "   'anio': 1988,\n",
-       "   'retorno_pelicula': 4.8884444,\n",
-       "   'budget_pelicula': 15000000.0,\n",
-       "   'revenue_pelicula': 73326666.0},\n",
-       "  {'titulo': 'Edward Scissorhands',\n",
-       "   'anio': 1990,\n",
-       "   'retorno_pelicula': 2.65,\n",
-       "   'budget_pelicula': 20000000.0,\n",
-       "   'revenue_pelicula': 53000000.0},\n",
-       "  {'titulo': 'Sleepy Hollow',\n",
-       "   'anio': 1999,\n",
-       "   'retorno_pelicula': 2.06071502,\n",
-       "   'budget_pelicula': 100000000.0,\n",
-       "   'revenue_pelicula': 206071502.0},\n",
-       "  {'titulo': \"Pee-wee's Big Adventure\",\n",
-       "   'anio': 1985,\n",
-       "   'retorno_pelicula': 6.823443666666667,\n",
-       "   'budget_pelicula': 6000000.0,\n",
-       "   'revenue_pelicula': 40940662.0},\n",
-       "  {'titulo': 'Planet of the Apes',\n",
-       "   'anio': 2001,\n",
-       "   'retorno_pelicula': 3.6221174,\n",
-       "   'budget_pelicula': 100000000.0,\n",
-       "   'revenue_pelicula': 362211740.0},\n",
-       "  {'titulo': 'Big Fish',\n",
-       "   'anio': 2003,\n",
-       "   'retorno_pelicula': 1.7559865,\n",
-       "   'budget_pelicula': 70000000.0,\n",
-       "   'revenue_pelicula': 122919055.0},\n",
-       "  {'titulo': 'Charlie and the Chocolate Factory',\n",
-       "   'anio': 2005,\n",
-       "   'retorno_pelicula': 3.16645842,\n",
-       "   'budget_pelicula': 150000000.0,\n",
-       "   'revenue_pelicula': 474968763.0},\n",
-       "  {'titulo': 'Vincent',\n",
-       "   'anio': 1982,\n",
-       "   'retorno_pelicula': 0.0,\n",
-       "   'budget_pelicula': 60000.0,\n",
-       "   'revenue_pelicula': 0.0},\n",
-       "  {'titulo': 'Corpse Bride',\n",
-       "   'anio': 2005,\n",
-       "   'retorno_pelicula': 2.929876525,\n",
-       "   'budget_pelicula': 40000000.0,\n",
-       "   'revenue_pelicula': 117195061.0},\n",
-       "  {'titulo': 'Sweeney Todd: The Demon Barber of Fleet Street',\n",
-       "   'anio': 2007,\n",
-       "   'retorno_pelicula': 3.04,\n",
-       "   'budget_pelicula': 50000000.0,\n",
-       "   'revenue_pelicula': 152000000.0},\n",
-       "  {'titulo': 'Alice in Wonderland',\n",
-       "   'anio': 2010,\n",
-       "   'retorno_pelicula': 5.12745555,\n",
-       "   'budget_pelicula': 200000000.0,\n",
-       "   'revenue_pelicula': 1025491110.0},\n",
-       "  {'titulo': 'Dark Shadows',\n",
-       "   'anio': 2012,\n",
-       "   'retorno_pelicula': 1.63684766,\n",
-       "   'budget_pelicula': 150000000.0,\n",
-       "   'revenue_pelicula': 245527149.0},\n",
-       "  {'titulo': 'Frankenweenie',\n",
-       "   'anio': 2012,\n",
-       "   'retorno_pelicula': 0.9048150769230768,\n",
-       "   'budget_pelicula': 39000000.0,\n",
-       "   'revenue_pelicula': 35287788.0},\n",
-       "  {'titulo': 'Big Eyes',\n",
-       "   'anio': 2014,\n",
-       "   'retorno_pelicula': 2.8883511,\n",
-       "   'budget_pelicula': 10000000.0,\n",
-       "   'revenue_pelicula': 28883511.0},\n",
-       "  {'titulo': 'Hansel and Gretel',\n",
-       "   'anio': 1982,\n",
-       "   'retorno_pelicula': 0.0,\n",
-       "   'budget_pelicula': 116000.0,\n",
-       "   'revenue_pelicula': 0.0},\n",
-       "  {'titulo': \"Miss Peregrine's Home for Peculiar Children\",\n",
-       "   'anio': 2016,\n",
-       "   'retorno_pelicula': 2.6953247181818183,\n",
-       "   'budget_pelicula': 110000000.0,\n",
-       "   'revenue_pelicula': 296485719.0},\n",
-       "  {'titulo': 'Frankenweenie',\n",
-       "   'anio': 1984,\n",
-       "   'retorno_pelicula': 0.0,\n",
-       "   'budget_pelicula': 1000000.0,\n",
-       "   'revenue_pelicula': 0.0}]}"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "get_director('tim burton')"
    ]
   },
   {
