correccion funcion score_titulo

--- a/notebooks/funciones.ipynb
+++ b/notebooks/funciones.ipynb
@@ -326,7 +326,7 @@
     "        return {'error not found': respuesta}\n",
     "    elif df_match['vote_count'].iloc[0] < 2000:\n",
     "        respuesta = f'La película {titulo_de_la_filmacion} no cuenta con al menos 2000 valoraciones, por favor ingrese otra.'\n",
-    "        return {'error not found': respuesta}\n",
+    "        return {'error minimum votes': respuesta}\n",
     "    else:\n",
     "        response = {\"título\": titulo_de_la_filmacion.title(),\n",
     "                \"anio\": df_match[\"release_year\"].iloc[0],\n",
