--- a/notebooks/ETL.ipynb
+++ b/notebooks/ETL.ipynb
@@ -121,7 +121,7 @@
     "    ]  # Aplicamos la funcion en cada fila de la columna y la guarda en una variable en formato lista\n",
     "    df[\n",
     "        column\n",
-    "    ] = transformed_column  # Guardamos la lista creada anteriormente a la columna belongs_to_collection"
+    "    ] = transformed_column  # Guardamos la lista creada "
    ]
   },
   {
@@ -167,7 +167,7 @@
     }
    ],
    "source": [
-    "# Reemplazamos no-infinitos valores por 0\n",
+    "# Reemplazamos -infinitos, infinitos y nan valores por 0\n",
     "df[\"release_date\"].replace([np.nan, np.inf, -np.inf], 0, inplace=True)\n",
     "\n",
     "# Encontramos los índices donde el valor es cero\n",
@@ -432,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.10"
   },
   "orig_nbformat": 4
  },
